Arrumando o serviço.card

--- a/home.html
+++ b/home.html
@@ -74,10 +74,10 @@
       </div>
       <div class="texto-secao">
         <h2>Quem é a <span class="destaque-roxo">PurPura</span>?</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque assumenda incidunt id cum. Fugiat repellat cumque delectus, at ipsum ad iure explicabo perferendis. If you're still reading this, congrats, you're officially a masochist.</p>
+        <p>Somos uma Startup focada em gerenciar resíduos orgânicos, conectando as indústrias que geram grandes quantidades de desperdício durante sua produção, e as que vêem isso como uma oportunidade de lucro.</p>
         <input type="checkbox" id="ler-mais-toggle" class="ler-mais-toggle">
         <p class="texto-oculto">
-          Autem temporibus, neque voluptas officiis molestiae. At vero eos et accusamus et iusto odio dignissimos ducimus. But hey, at least you're not stuck in traffic, or worse, listening to a never-ending sales pitch, right?
+          Além de reduzir o impacto ambiental, nossa solução transforma resíduos em oportunidades de negócio, conectando quem descarta a quem reaproveita, com rastreabilidade, eficiência e valor para toda a cadeia.
         </p>
         <label for="ler-mais-toggle" class="botao-ler-mais">Ler mais</label>
       </div>
@@ -94,11 +94,11 @@
       </div>
       <div class="texto-secao">
         <h2>Por que escolher a <span class="destaque-roxo">PurPura</span>?</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque assumenda incidunt id cum. Fugiat repellat cumque delectus, at ipsum ad iure explicabo perferendis. Why do we press harder on the remote control when the batteries are weak?</p>
-        <p>Autem temporibus, neque voluptas officiis molestiae. At vero eos et accusamus et iusto odio dignissimos ducimus. And why is it that the one time you need a pen, it's always out of ink?</p>
+        <p>A PurPura garante credibilidade e confiabilidade para ambos os lados do negócio, oferecendo comunicação entre os colaboradores e outras funcionalidades essenciais para uma boa relação entre as empresas envolvidas.</p>
+        <p>A PurPura simplifica negociações com uma plataforma ágil e transparente, reduzindo custos e fortalecendo práticas ambientais.</p>
         <input type="checkbox" id="ler-mais-toggle-2" class="ler-mais-toggle">
         <p class="texto-oculto">
-            Autem temporibus, neque voluptas officiis molestiae. At vero eos et accusamus et iusto odio dignissimos ducimus. And why is it that the one time you need a pen, it's always out of ink?
+          Também oferece relatórios claros, ajudando empresas a acompanhar resultados e tomar decisões mais sustentáveis.
         </p>
         <label for="ler-mais-toggle-2" class="botao-ler-mais">Ler mais</label>
       </div>
