--- a/home.html
+++ b/home.html
@@ -161,7 +161,7 @@
     
     <div class="servicos-cta">
       <p>Descubra uma variedade de funcionalidades incríveis que vão te ajudar a aumentar a produtividade e gerenciar seu projeto de forma fácil.</p>
-      <button class="cta" href="#secao-beneficios">Benefícios</button>
+      <button class="cta"><a href="#secao-beneficios">Benefícios</a></button>
     </div>
   </section>
 
