--- a/home.html
+++ b/home.html
@@ -122,7 +122,7 @@
         <h3>Cadastro Unificado</h3>
         <p>O aplicativo oferece uma interface personalizada, onde você se cadastra tanto como Gerador ou como aproveitador.</p>
       </div>
-      <div class="servico-card destaque">
+      <div class="servico-card">
         <div class="icone-circulo">
           <span class="icone-placeholder"><img src="c:\Users\irisrodrigues-ieg\Downloads\ranking-podium 1.png" alt=""></span>
         </div>
