--- a/cadastro.html
+++ b/cadastro.html
@@ -149,15 +149,74 @@
                     <select id="ddd" name="ddd" required>
                         <option value="" disabled selected>DDD</option>
                         <option value="11">11</option>
+                        <option value="12">12</option>
+                        <option value="13">13</option>
+                        <option value="14">14</option>
+                        <option value="15">15</option>
+                        <option value="16">16</option>
+                        <option value="17">17</option>
+                        <option value="18">18</option>
+                        <option value="19">19</option>
                         <option value="21">21</option>
+                        <option value="22">22</option>
+                        <option value="24">24</option>
+                        <option value="27">27</option>
+                        <option value="28">28</option>
                         <option value="31">31</option>
+                        <option value="32">32</option>
+                        <option value="33">33</option>
+                        <option value="34">34</option>
+                        <option value="35">35</option>
+                        <option value="37">37</option>
+                        <option value="38">38</option>
                         <option value="41">41</option>
+                        <option value="42">42</option>
+                        <option value="43">43</option>
+                        <option value="44">44</option>
+                        <option value="45">45</option>
+                        <option value="46">46</option>
+                        <option value="47">47</option>
+                        <option value="48">48</option>
+                        <option value="49">49</option>
                         <option value="51">51</option>
+                        <option value="53">53</option>
+                        <option value="54">54</option>
+                        <option value="55">55</option>
                         <option value="61">61</option>
+                        <option value="62">62</option>
+                        <option value="63">63</option>
+                        <option value="64">64</option>
+                        <option value="65">65</option>
+                        <option value="66">66</option>
+                        <option value="67">67</option>
+                        <option value="68">68</option>
+                        <option value="69">69</option>
                         <option value="71">71</option>
-                        <option value="81">81</option>
-                        <option value="91">91</option>
-                    </select>
+                        <option value="73">73</option>
+                        <option value="74">74</option>
+                        <option value="75">75</option>
+                        <option value="77">77</option>option>
+                            <option value="79">79</option>
+                            <option value="81">81</option>
+                            <option value="82">82</option>
+                            <option value="83">83</option>
+                            <option value="84">84</option>
+                            <option value="85">85</option>
+                            <option value="86">86</option>
+                            <option value="87">87</option>
+                            <option value="88">88</option>
+                            <option value="89">89</option>
+                            <option value="91">91</option>
+                            <option value="92">92</option>
+                            <option value="93">93</option>
+                            <option value="94">94</option>
+                            <option value="95">95</option>
+                            <option value="96">96</option>
+                            <option value="97">97</option>
+                            <option value="98">98</option>
+                            <option value="99">99</option>
+
+                     </select>
                     <input type="tel" id="telefone" name="telefone" placeholder="99999-9999" required>
                 </div>
             </div>
@@ -193,7 +252,7 @@
             
             let formularioValido = true;
 
-            // Validação do nome
+            // validação do nome
             if (nomeInput.value.trim() === '') {
                 nomeErro.style.display = 'block';
                 formularioValido = false;
@@ -201,7 +260,7 @@
                 nomeErro.style.display = 'none';
             }
 
-            // Validação do e-mail
+            // validação do e-mail
             if (!emailInput.value.includes('@') || !emailInput.value.includes('.')) {
                 emailErro.style.display = 'block';
                 formularioValido = false;
@@ -209,7 +268,7 @@
                 emailErro.style.display = 'none';
             }
 
-            // Validação da senha (comprimento mínimo)
+            // validação da senha (comprimento mínimo)
             if (senhaInput.value.length < 6) {
                 senhaErro.style.display = 'block';
                 formularioValido = false;
@@ -217,15 +276,14 @@
                 senhaErro.style.display = 'none';
             }
 
-            // Validação da confirmação de senha
+            // validação da confirmação de senha
             if (senhaInput.value !== confirmarSenhaInput.value) {
                 confirmarSenhaErro.style.display = 'block';
                 formularioValido = false;
             } else {
                 confirmarSenhaErro.style.display = 'none';
             }
-            
-            // Impede o envio do formulário se a validação falhar
+
             if (!formularioValido) {
                 event.preventDefault();
             }
