Adicionando a página de login

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 <body>
   <header class="site-header">
     <div class="container nav-container">
-      <div class="logo" href="#home">PurPura</div>
+      <div class="logo" href="#home"> <img src="c:\Users\irisrodrigues-ieg\Downloads\Group 198 1.png" alt=""></div>
       <nav class="main-nav">
         <ul>
           <li>
