--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 <body>
   <header class="site-header">
     <div class="container nav-container">
-      <div class="logo" href="#home"> <img src="c:\Users\irisrodrigues-ieg\Downloads\Group 198 1.png" alt=""></div>
+      <div class="logo" href="#home"> <img src="file:///C:/Users/irisrodrigues-ieg/Downloads/Group%20198%201.svg" alt=""></div>
       <nav class="main-nav">
         <ul>
           <li>
@@ -61,7 +61,7 @@
         <a class="cta" href="#secao-servicos">Saiba Mais</a>
       </div>
       <div class="hero-right">
-        <img class="decor" src="c:\Users\irisrodrigues-ieg\Downloads\Group 138.png" alt="padrão roxo decorativo"  style="width: 600px; height: auto;" >
+        <img class="decor" src="c:\Users\irisrodrigues-ieg\AppData\Local\Microsoft\Olk\Attachments\ooa-15e2136a-4ba5-420d-b313-dd966afd53ba\2bf23ff13469a44a64935a910734cd625d71be8e439181adf63c36a9456ed975\Frame 3922.png" alt="decoração"  style="width: 600px; height: auto;" >
       </div>
     </section>
   </main>
@@ -124,7 +124,7 @@
       </div>
       <div class="servico-card">
         <div class="icone-circulo">
-          <span class="icone-placeholder"><img src="c:\Users\irisrodrigues-ieg\Downloads\ranking-podium 1.png" alt=""></span>
+          <span class="icone-placeholder"><img src="c:\Users\irisrodrigues-ieg\Downloads\lets-icons_chat-fill (2).png" alt=""></span>
         </div>
         <h3>Chat Integrado</h3>
         <p>Comunique-se de forma rápida e segura com indústrias e coletores usando o chat do aplicativo.</p>
