(feat)-barra lateral do crud

--- a/src/main/webapp/crud.html
+++ b/src/main/webapp/crud.html
@@ -8,6 +8,22 @@
 </head>
 <body>
     <!-- barra lateral -->
-    
+    <div class="sidebar">
+        <h2>CRUD OPERATIONS</h2>
+        <div class="profile">
+            <img src="https://png.pngtree.com/png-vector/20190704/ourmid/pngtree-administration-icon-in-trendy-style-isolated-background-png-image_1538647.jpg" alt="foto do admin">
+            <h3>Nome Do Administrador</h3>
+            <p>Admin</p>
+        </div>
+        <div class="menu">
+            <a href="#" class="active"> <img src="x.png" alt="">Empresas</a>
+            <a href="#"><img src="x.png" alt="">Resíduos</a>
+            <a href="#"><img src="x.png" alt="">Students</a>
+            <a href="#"><img src="x.png" alt="">Payment</a>
+            <a href="#"><img src="x.png" alt="">Report</a>
+            <a href="#"><img src="x.png" alt="">Admin</a>
+        </div>
+        <a href="#" class="logout"><img src="icondologout.png" alt="">Logout</a>
+    </div>
 </body>
 </html>
