--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -11,7 +11,7 @@
     <div class="login-container">
         <h1 class="logo">PurPura</h1>
         <p class="subtitulo">A sua jornada sustentável continua aqui!</p>
-        <form id="login-form">
+        <form id="login-form" action="login-auth" method="post">
             <div class="form-group">
                 <label for="email">E-mail</label>
                 <input type="email" id="email" name="email" placeholder="nome@exemplo.com" required>
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label for="password">Senha</label>
-                <input type="password" id="password" name="password" placeholder="Sua senha" required>
+                <input type="password" id="password" name="senha" placeholder="Sua senha" required>
                 <span id="password-error" class="error-message">Por favor, insira sua senha.</span>
             </div>
             <div class="form-footer">
