(feat)- fazendo pág de resíduos e dando ajustes

--- a/src/main/webapp/crud.html
+++ b/src/main/webapp/crud.html
@@ -17,14 +17,14 @@
             <p>Admin</p>
         </div>
         <div class="menu">
-            <a href="empresas.html" target="conteudo-principal" class="active"> <img src="x.png" alt="">Empresas</a>
-            <a href="residuos.html" target="conteudo-principal"><img src="x.png" alt="">Resíduos</a>
-            <a href="students.html" target="conteudo-principal"><img src="x.png" alt="">Students</a>
-            <a href="payment.html" target="conteudo-principal"><img src="x.png" alt="">Payment</a>
-            <a href="report.html" target="conteudo-principal"><img src="x.png" alt="">Report</a>
-            <a href="admin.html" target="conteudo-principal"><img src="x.png" alt="">Admin</a>
+            <a href="empresas.html" target="conteudo-principal" class="active"> <img src="c:\Users\irisrodrigues-ieg\Downloads\Vector (8).png" alt="">Empresas</a>
+            <a href="residuos.html" target="conteudo-principal"><img src="c:\Users\irisrodrigues-ieg\Downloads\mdi_organic-outline.png" alt="">Resíduos</a>
+            <a href="endereco.html" target="conteudo-principal"><img src="c:\Users\irisrodrigues-ieg\Downloads\mdi_address-marker.png" alt="">Endereço</a>
+            <a href="payment.html" target="conteudo-principal"><img src="c:\Users\irisrodrigues-ieg\Downloads\usd-square 1.png" alt="">Arquivos</a>
+            <a href="report.html" target="conteudo-principal"><img src="c:\Users\irisrodrigues-ieg\Downloads\file-chart-line 1 (1).png" alt="">Pagamento</a>
+            <a href="admin.html" target="conteudo-principal"><img src="c:\Users\irisrodrigues-ieg\Downloads\sliders-v-square 1.png" alt="">Tranporte</a>
         </div>
-        <a href="#" class="logout"><img src="icon_do_logout.png" alt="">Logout</a>
+        <a href="home.html" class="logout"><img src="c:\Users\irisrodrigues-ieg\Downloads\sign-out-alt 1.png" alt="">Logout</a>
     </div>
     
     <main class="content">
