--- a/src/main/webapp/endereco.html
+++ b/src/main/webapp/endereco.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="crud.css">
-    <title>empresas-crud</title>
+    <title>endereço-crud</title>
 </head>
 <body>
     <div class="main">
         <div class="header">
-          <h1>Lista de Empresas</h1>
+          <h1>Lista de Enderços</h1>
           <button class="add-btn">Adicionar Empresa</button>
         </div>
     
@@ -17,21 +17,22 @@
           <thead>
             <tr>
               <th>Nome</th>
-              <th>Email</th>
-              <th>Senha</th>
-              <th>Nível de Acesso</th>
+              <th>Localidade</th>
+              <th>Logradouro</th>
+              <th>Complemento</th>
+              <th>CEP</th>
               <th></th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td> Karthi</td>
-              <td>karthi@gmmail.com</td>
+              <td>Cidade,Estado,Bairro</td>
               <td>
-                <span class="hidden-password">************</span>
-                <img src="c:\Users\irisrodrigues-ieg\Downloads\Vector (6).png" alt="Mostrar" class="toggle-password">
+                <span>Rua,Número</span>
               </td>
-              <td>08-Dec, 2021</td>
+              <td>Loja 1</td>
+              <td>00000-000</td>
               <td class="actions">
                 <img src="c:\Users\irisrodrigues-ieg\Downloads\pen 1.png" alt="Editar">
                 <img src="c:\Users\irisrodrigues-ieg\Downloads\trash 1.png" alt="Excluir">
@@ -40,12 +41,12 @@
     
             <tr>
               <td> Karthi</td>
-              <td>karthi@gmmail.com</td>
+              <td>Cidade,Estado,Bairro</td>
               <td>
-                <span class="hidden-password">************</span>
-                <img src="c:\Users\irisrodrigues-ieg\Downloads\Vector (7).png" alt="Mostrar" class="toggle-password">
+                <span>Rua,Número</span>
               </td>
-              <td>08-Dec, 2021</td>
+              <td>Loja 2</td>
+              <td>00000-000</td>
               <td class="actions">
                 <img src="c:\Users\irisrodrigues-ieg\Downloads\pen 1.png" alt="Editar">
                 <img src="c:\Users\irisrodrigues-ieg\Downloads\trash 1.png" alt="Excluir">
