--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -322,7 +322,7 @@
             <a href="mailto:contato@purpura.com" title="E-mail"><i class="fas fa-envelope"></i></a>
           </div>
           <!-- botão secreto embaixo -->
-          <a href="private.html" class="secret" title="Área Privada"><i class="fas fa-lock"></i> acesso restrito</a>
+          <a href="teste.html" class="secret" title="Área Privada"><i class="fas fa-lock"></i> acesso restrito</a>
         </div>
     
         <!-- linha de copyright -->
