(bugfix) Corrige loginServlet

--- a/src/main/webapp/cadastro.html
+++ b/src/main/webapp/cadastro.html
@@ -156,7 +156,7 @@
             </div>
             <div class="form-footer">
                 <button type="submit" class="btn-cadastro">Cadastrar</button>
-                <a href="login.html" class="link-login">Já tem uma conta? Faça login</a>
+                <a href="login.jsp" class="link-login">Já tem uma conta? Faça login</a>
             </div>
         </form>
     </div>
