--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,7 +42,7 @@
         </ul>
       </nav>
       <div class="auth">
-        <a class="login" href="login.html">Login</a>
+        <a class="login" href="login.jsp">Login</a>
         <a class="signup" href="cadastro.html">Cadastro</a>
       </div>
     </div>
