(test) - adicionando um form temporario para ter acesso as informações do CRUD

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -294,6 +294,13 @@
             </div>
         </div>
     </div>
+      <div>
+          <form action="findAll" method="post">
+              <input type="hidden" name="tabelaNome" value="administrador">
+              <button type="submit">Ver</button>
+          </form>
+
+      </div>
   </section>
     <!-- fotter -->
     <div class="footer-wrapper">
