(bugfix) Corrige erro de inserção na tela de login

--- a/src/main/webapp/popUpAdministrador.html
+++ b/src/main/webapp/popUpAdministrador.html
@@ -8,17 +8,17 @@
 <h1>CADASTRO ADMINISTRADOR</h1>
 <form action="insert" method="post">
     <input type="hidden" name="tabelaNome" value="Administrador">
-    <label for="cnmadministrador">Digite seu nome: </label>
+    <label for="cNmAdministrador">Digite seu nome: </label>
     <br>
-    <input type="text" name="cnmadministrador" id="cnmadministrador" required>
+    <input type="text" name="cNmAdministrador" id="cNmAdministrador" required>
     <br>
-    <label for="cemail">Digite seu email: </label>
+    <label for="cEmail">Digite seu email: </label>
     <br>
-    <input type="text" name="cemail" id="cemail" required>
+    <input type="text" name="cEmail" id="cEmail" required>
     <br>
-    <label for="csenha">Digite sua senha: </label>
+    <label for="cSenha">Digite sua senha: </label>
     <br>
-    <input type="text" name="csenha" id="csenha" required>
+    <input type="text" name="cSenha" id="cSenha" required>
 
     <br>
     <input type="submit" value="Cadastrar">
