(style) - concertando o erro de INSERT da tabela adm

--- a/src/main/webapp/PopUpAdministrador.html
+++ b/src/main/webapp/PopUpAdministrador.html
@@ -7,7 +7,7 @@
 <body>
 <h1>CADASTRO ADMINISTRADOR</h1>
 <form action="insert" method="post">
-    <input type="hidden" name="caminho" value="WEB-INF/Administrador/ListarAdm">
+    <input type="hidden" name="caminho" value="WEB-INF/Administrador/ListarAdm.jsp">
     <input type="hidden" name="tabelaNome" value="Administrador">
     <label for="cNmAdministrador">Digite seu nome: </label>
     <br>
