--- a/src/main/webapp/crud.html
+++ b/src/main/webapp/crud.html
@@ -20,9 +20,9 @@
             <a href="empresas.html" target="conteudo-principal" class="active"> <img src="c:\Users\irisrodrigues-ieg\Downloads\Vector (8).png" alt="">Empresas</a>
             <a href="residuos.html" target="conteudo-principal"><img src="c:\Users\irisrodrigues-ieg\Downloads\mdi_organic-outline.png" alt="">Resíduos</a>
             <a href="endereco.html" target="conteudo-principal"><img src="c:\Users\irisrodrigues-ieg\Downloads\mdi_address-marker.png" alt="">Endereço</a>
-            <a href="payment.html" target="conteudo-principal"><img src="c:\Users\irisrodrigues-ieg\Downloads\usd-square 1.png" alt="">Arquivos</a>
-            <a href="report.html" target="conteudo-principal"><img src="c:\Users\irisrodrigues-ieg\Downloads\file-chart-line 1 (1).png" alt="">Pagamento</a>
-            <a href="admin.html" target="conteudo-principal"><img src="c:\Users\irisrodrigues-ieg\Downloads\sliders-v-square 1.png" alt="">Tranporte</a>
+            <a href="telefone.html" target="conteudo-principal"><img src="c:\Users\irisrodrigues-ieg\Downloads\Vector (9).png" alt="">Telefone</a>
+            <a href="transporte.html" target="conteudo-principal"><img src="c:\Users\irisrodrigues-ieg\Downloads\Vector (10).png" alt="">Transporte</a>
+            <a href="admin.html" target="conteudo-principal"><img src="c:\Users\irisrodrigues-ieg\Downloads\sliders-v-square 1.png" alt="">Admin</a>
         </div>
         <a href="home.html" class="logout"><img src="c:\Users\irisrodrigues-ieg\Downloads\sign-out-alt 1.png" alt="">Logout</a>
     </div>
