--- a/src/main/webapp/Menu.html
+++ b/src/main/webapp/Menu.html
@@ -6,9 +6,7 @@
 </head>
 <body>
         <h1>SEJA BEM VINDO!!!</h1>
-           <form action="findAll" method="post">
-               <input type="hidden" name="caminho" value="WEB-INF/Administrador/ListarAdm.jsp">
-               <input type="hidden" name="tabelaNome" value="administrador">
+           <form action="administrador/list" method="get">
                <input type="submit" value="ADMINISTRADOR">
            </form>
         <br>
