(feat) - Arrumando as classes para receber o CRUD da tabela empresa

--- a/src/main/webapp/Menu.html
+++ b/src/main/webapp/Menu.html
@@ -12,8 +12,7 @@
                <input type="submit" value="ADMINISTRADOR">
            </form>
         <br>
-        <form action="findAll" method="post">
-            <input type="hidden" name="tabelaNome" value="empresa">
+        <form action="empresa/list" method="get">
             <input type="submit" value="EMPRESA">
         </form>
         <br>
