(feat) - Alinha o Back com o front de Empresa, read

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -324,7 +324,7 @@
                 <a href="mailto:contato@purpura.com" title="E-mail"><i class="fas fa-envelope"></i></a>
             </div>
             <!-- botão secreto embaixo -->
-            <a href="Menu.html" class="secret" title="Área Privada"><i class="fas fa-lock"></i> acesso restrito</a>
+            <a href="CRUD/crud.html" class="secret" title="Área Privada"><i class="fas fa-lock"></i> acesso restrito</a>
         </div>
 
         <!-- linha de copyright -->
