--- a/src/main/webapp/CRUD/crud.html
+++ b/src/main/webapp/CRUD/crud.html
@@ -17,7 +17,7 @@
         <p>Admin</p>
     </div>
     <div class="menu">
-        <a href="empresas.html" target="conteudo-principal" class="active"> <img src="c:\Users\irisrodrigues-ieg\Downloads\Vector (8).png" alt="">Empresas</a>
+        <a href="empresas.jsp" target="conteudo-principal" class="active"> <img src="c:\Users\irisrodrigues-ieg\Downloads\Vector (8).png" alt="">Empresas</a>
         <a href="residuos.html" target="conteudo-principal"><img src="c:\Users\irisrodrigues-ieg\Downloads\mdi_organic-outline.png" alt="">Resíduos</a>
         <a href="endereco.html" target="conteudo-principal"><img src="c:\Users\irisrodrigues-ieg\Downloads\mdi_address-marker.png" alt="">Endereço</a>
         <a href="telefone.html" target="conteudo-principal"><img src="c:\Users\irisrodrigues-ieg\Downloads\Vector (9).png" alt="">Telefone</a>
@@ -28,7 +28,7 @@
 </div>
 
 <main class="content">
-    <iframe name="conteudo-principal" src="empresas.html"></iframe>
+    <iframe name="conteudo-principal" src="empresas.jsp"></iframe>
 </main>
 
 </body>
