(feat) - Alterando o menu de html para jsp e fazendo as mudanças para direcionar ao servlet de list Empresa

--- a/src/main/webapp/CRUD/logincrud.html
+++ b/src/main/webapp/CRUD/logincrud.html
@@ -21,7 +21,7 @@
             <span id="password-error" class="error-message">Por favor, insira sua senha.</span>
         </div>
         <div class="form-footer">
-            <a href="crud.html"> <button  type="submit" class="btn-login" ><a href="crud.html">Entrar</a></button></a>
+            <a href="crud.jsp"> <button type="submit" class="btn-login" ><a href="crud.jsp">Entrar</a></button></a>
         </div>
     </form>
 </div>
