(feat) Barra lateral de crud mostra nome do usuário

--- a/src/main/webapp/cadastro.html
+++ b/src/main/webapp/cadastro.html
@@ -132,7 +132,7 @@
     <div class="container-cadastro">
         <h1 class="logo">PurPura</h1>
         <p class="subtitulo">A sua jornada sustentável começa aqui!</p>
-        <form action="insert" method="post" id="form-cadastro">
+        <form action="administrador/insert" method="post" id="form-cadastro">
             <div class="form-group">
                 <input type="hidden" name="tabelaNome" value="Administrador">
                 <label for="nome">Nome Completo</label>
