(feat)-arrumando as imagens do asseds

--- a/src/main/webapp/crud.html
+++ b/src/main/webapp/crud.html
@@ -24,7 +24,7 @@
             <a href="transporte.html" target="conteudo-principal"><img src="c:\Users\irisrodrigues-ieg\Downloads\Vector (10).png" alt="">Transporte</a>
             <a href="admin.html" target="conteudo-principal"><img src="c:\Users\irisrodrigues-ieg\Downloads\sliders-v-square 1.png" alt="">Admin</a>
         </div>
-        <a href="index.jsp" class="logout"><img src="c:\Users\irisrodrigues-ieg\Downloads\sign-out-alt 1.png" alt="">Logout</a>
+        <a href="index.jsp" class="logout"><img src="../assets/saida.png" alt="">Logout</a>
     </div>
     
     <main class="content">
