--- a/src/main/webapp/empresas.html
+++ b/src/main/webapp/empresas.html
@@ -33,8 +33,8 @@
               </td>
               <td>08-Dec, 2021</td>
               <td class="actions">
-                <img src="c:\Users\irisrodrigues-ieg\Downloads\pen 1.png" alt="Editar">
-                <img src="c:\Users\irisrodrigues-ieg\Downloads\trash 1.png" alt="Excluir">
+                <img src="../assets/lapis.png" alt="Editar">
+                <img src="../assets/lixeira.png" alt="Excluir">
               </td>
             </tr>
     
@@ -47,8 +47,8 @@
               </td>
               <td>08-Dec, 2021</td>
               <td class="actions">
-                <img src="c:\Users\irisrodrigues-ieg\Downloads\pen 1.png" alt="Editar">
-                <img src="c:\Users\irisrodrigues-ieg\Downloads\trash 1.png" alt="Excluir">
+                <img src="../assets/lapis.png" alt="Editar">
+                <img src="../assets/lixeira.png" alt="Excluir">
               </td>
             </tr>
                       
