--- a/src/main/webapp/residuos.html
+++ b/src/main/webapp/residuos.html
@@ -32,8 +32,8 @@
               </td>
               <td>R$30,00/20Kg</td>
               <td class="actions">
-                <img src="c:\Users\irisrodrigues-ieg\Downloads\pen 1.png" alt="Editar">
-                <img src="c:\Users\irisrodrigues-ieg\Downloads\trash 1.png" alt="Excluir">
+                <img src="../assets/lapis.png" alt="Editar">
+                <img src="../assets/lixeira.png" alt="Excluir">
               </td>
             </tr>
     
@@ -45,8 +45,8 @@
               </td>
               <td>R$30,00/20Kg</td>
               <td class="actions">
-                <img src="c:\Users\irisrodrigues-ieg\Downloads\pen 1.png" alt="Editar">
-                <img src="c:\Users\irisrodrigues-ieg\Downloads\trash 1.png" alt="Excluir">
+                <img src="../assets/lapis.png" alt="Editar">
+                <img src="../assets/lixeira.png" alt="Excluir">
               </td>
             </tr>
                       
