(bugfix) Corrige path das imagens

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>PurPura</title>
-    <link href="../assets/iconelogo.png" rel="stylesheet">
-    <link rel="icon" type="image/png" href="../assets/iconelogo.png">
+    <link href="assets/iconelogo.png" rel="stylesheet">
+    <link rel="icon" type="image/png" href="assets/iconelogo.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header class="site-header">
     <div class="container nav-container">
-        <div class="logo" href="#home"><a href="#home"><img src="../assets/logo.svg" alt=""></a></div>
+        <div class="logo" href="#home"><a href="#home"><img src="assets/logo.svg" alt=""></a></div>
         <nav class="main-nav">
             <ul>
                 <li>
@@ -55,13 +55,13 @@
                 O que sua empresa faz com os resíduos
                 <strong> pode mudar o futuro.</strong>
                 <span style="font-weight: 400;">Você está pronto para isso?</span>
-                <div><img src="../assets/listra.png" alt=""></div>
+                <div><img src="assets/listra.png" alt=""></div>
             </h1>
             <p class="subtitle" style="color: #694a8a;">Com a PurPura mostramos que é possível inovar sem descartar o planeta, mas como conectar logística, impacto ambiental e propósito em um só lugar!</p>
             <a class="cta" href="#secao-servicos">Saiba Mais</a>
         </div>
         <div class="hero-right">
-            <img class="decor" src="../assets/decoracao.png" alt="decoração"  style="width: 600px; height: auto;" >
+            <img class="decor" src="assets/decoracao.png" alt="decoração"  style="width: 600px; height: auto;" >
         </div>
     </section>
 </main>
@@ -117,42 +117,42 @@
     <div class="servicos-grid">
         <div class="servico-card">
             <div class="icone-circulo">
-                <span class="icone-placeholder"><img src="../assets/cadastrounificado.svg" alt=""></span>
+                <span class="icone-placeholder"><img src="assets/cadastrounificado.svg" alt=""></span>
             </div>
             <h3>Cadastro Unificado</h3>
             <p>O aplicativo oferece uma interface personalizada, onde você se cadastra tanto como Gerador ou como aproveitador.</p>
         </div>
         <div class="servico-card">
             <div class="icone-circulo">
-                <span class="icone-placeholder"><img src="../assets/chatintegradoimg.png" alt=""></span>
+                <span class="icone-placeholder"><img src="assets/chatintegradoimg.png" alt=""></span>
             </div>
             <h3>Chat Integrado</h3>
             <p>Comunique-se de forma rápida e segura com indústrias e coletores usando o chat do aplicativo.</p>
         </div>
         <div class="servico-card">
             <div class="icone-circulo">
-                <span class="icone-placeholder"><img src="../assets/indicadoresdeimpactoimg.png" alt=""></span>
+                <span class="icone-placeholder"><img src="assets/indicadoresdeimpactoimg.png" alt=""></span>
             </div>
             <h3>Indicadores de Impacto</h3>
             <p>Acompanhe o seu impacto ambiental e os ganhos financeiros com o descarte correto.</p>
         </div>
         <div class="servico-card">
             <div class="icone-circulo">
-                <span class="icone-placeholder"><img src="../assets/negociacoadiretaimg.png" alt=""></span>
+                <span class="icone-placeholder"><img src="assets/negociacoadiretaimg.png" alt=""></span>
             </div>
             <h3>Negociação Direta</h3>
             <p>Receba sugestões de empresas interessadas na coleta e negocie valores por quilo diretamente pela plataforma.</p>
         </div>
         <div class="servico-card">
             <div class="icone-circulo">
-                <span class="icone-placeholder"><img src="../assets/relaotioautomaticoimg.png" alt=""></span>
+                <span class="icone-placeholder"><img src="assets/relaotioautomaticoimg.png" alt=""></span>
             </div>
             <h3>Relatórios Automáticos</h3>
             <p>Receba relatórios completos com histórico de coletas e documentos compatíveis com o PGRS (Plano de Gerenciamento de Resíduos Sólidos), atendendo a exigências legais.</p>
         </div>
         <div class="servico-card">
             <div class="icone-circulo">
-                <span class="icone-placeholder"><img src="../assets/gestaodedemandaimg.png" alt=""></span>
+                <span class="icone-placeholder"><img src="assets/gestaodedemandaimg.png" alt=""></span>
             </div>
             <h3>Gestão de demanda</h3>
             <p>Gerencie sua demanda e encontre fornecedores confiáveis de matéria-prima para manter suas operações.</p>
@@ -191,7 +191,7 @@
         </ul>
     </div>
     <div class="beneficios-right">
-        <img src="../assets/beneficiosimg.png" alt="">
+        <img src="assets/beneficiosimg.png" alt="">
     </div>
 </section>
 
