(feat) Altera subtitulo da home

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -58,8 +58,7 @@
                     O que sua empresa faz com os resíduos pode mudar o futuro.
                     Você está pronto para isso?
                 </h1>
-                <p class="subtitle" style="color: #694a8a;">Com a PurPura mostramos que é possível inovar sem descartar
-                    o planeta, mas como conectar logística, impacto ambiental e propósito em um só lugar!</p>
+                <p class="subtitle" style="color: #694a8a;">Promovemos a conexão inteligente entre indústrias. Juntos, transformamos o excedente em valor, inovação e um futuro mais limpo!</p>
                 <a class="cta" href="#secao-servicos">Saiba Mais</a>
             </div>
             <div class="hero-right">
