(feat) Arruma estrutura do footer e secao-servicos, altera CSS para centralizar ícones.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PurPura | Sustentabilidade e Compromisso com o Futuro</title>
     <link rel="shortcut icon" href="assets/purpura/icone_purpura.svg">
     <link rel="stylesheet" href="style.css">
@@ -114,53 +114,43 @@
 
         <div class="servicos-grid">
             <div class="servico-card">
-                <div class="icone-circulo">
-                    <span class="icone-placeholder"><img src="assets/servicos/servicos-roxo/cadastro_unificado_roxo.svg"
-                            alt=""></span>
-                </div>
+                <span class="icone-circulo"><img src="assets/servicos/servicos-roxo/cadastro_unificado_roxo.svg"
+                        alt=""></span>
                 <h3>Cadastro Unificado</h3>
                 <p>O aplicativo oferece uma interface personalizada, onde você se cadastra tanto como Gerador ou como
                     aproveitador.</p>
             </div>
             <div class="servico-card">
-                <div class="icone-circulo">
-                    <span class="icone-placeholder"><img src="assets/servicos/servicos-roxo/chat_integrado_roxo.svg"
-                            alt=""></span>
-                </div>
+                <span class="icone-circulo"><img src="assets/servicos/servicos-roxo/chat_integrado_roxo.svg"
+                        alt=""></span>
                 <h3>Chat Integrado</h3>
                 <p>Comunique-se de forma rápida e segura com indústrias e coletores usando o chat do aplicativo.</p>
             </div>
             <div class="servico-card">
-                <div class="icone-circulo">
-                    <span class="icone-placeholder"><img
-                            src="assets/servicos/servicos-roxo/indicadores_impacto_roxo.svg" alt=""></span>
-                </div>
+
+                <span class="icone-circulo"><img src="assets/servicos/servicos-roxo/indicadores_impacto_roxo.svg"
+                        alt=""></span>
+
                 <h3>Indicadores de Impacto</h3>
                 <p>Acompanhe o seu impacto ambiental e os ganhos financeiros com o descarte correto.</p>
             </div>
             <div class="servico-card">
-                <div class="icone-circulo">
-                    <span class="icone-placeholder"><img src="assets/servicos/servicos-roxo/negociacao_direta_roxo.svg"
-                            alt=""></span>
-                </div>
+                <span class="icone-circulo"><img src="assets/servicos/servicos-roxo/negociacao_direta_roxo.svg"
+                        alt=""></span>
                 <h3>Negociação Direta</h3>
                 <p>Receba sugestões de empresas interessadas na coleta e negocie valores por quilo diretamente pela
                     plataforma.</p>
             </div>
             <div class="servico-card">
-                <div class="icone-circulo">
-                    <span class="icone-placeholder"><img
-                            src="assets/servicos/servicos-roxo/relatorios_automaticos_roxo.svg" alt=""></span>
-                </div>
+                <span class="icone-circulo"><img src="assets/servicos/servicos-roxo/relatorios_automaticos_roxo.svg"
+                        alt=""></span>
                 <h3>Relatórios Automáticos</h3>
                 <p>Receba relatórios completos com histórico de coletas e documentos compatíveis com o PGRS (Plano de
                     Gerenciamento de Resíduos Sólidos), atendendo a exigências legais.</p>
             </div>
             <div class="servico-card">
-                <div class="icone-circulo">
-                    <span class="icone-placeholder"><img src="assets/servicos/servicos-roxo/gestao_demanda_roxo.svg"
-                            alt=""></span>
-                </div>
+                <span class="icone-circulo"><img src="assets/servicos/servicos-roxo/gestao_demanda_roxo.svg"
+                        alt=""></span>
                 <h3>Gestão de demanda</h3>
                 <p>Gerencie sua demanda e encontre fornecedores confiáveis de matéria-prima para manter suas operações.
                 </p>
@@ -316,42 +306,26 @@
         <div>
         </div>
     </section>
-    <!-- fotter -->
-    <div class="footer-wrapper">
-        <!-- Ícones -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
-        <footer>
-            <!-- Coluna 1 -->
-            <div class="footer-col">
-                <h4>PurPura</h4>
-                <p>Gestão de resíduos orgânicos com impacto social e sustentável.</p>
+    <footer>
+        <div class="footer-col">
+            <h4>PurPura</h4>
+            <p>Gestão de resíduos orgânicos com impacto social e sustentável.</p>
+        </div>
+        <div class="footer-col">
+            <h4>Contato</h4>
+            <div class="social-icons">
+                <a href=""><img src="assets/purpura/instagram_purpura.svg" alt="ícone do Instagram"></a>
+                <a href="mailto:purpuraambiental4@gmail.com" title="E-mail"><img
+                        src="assets/purpura/contato_purpura.svg" alt="ícone de email"></a>
             </div>
-
-            <!-- Coluna 2 -->
-            <div class="footer-col">
-                <h4>Links</h4>
-                <a href="#">Política de Privacidade</a><br>
-                <a href="#">Termos de Uso</a>
-            </div>
-
-            <!-- Coluna 3 -->
-            <div class="footer-col">
-                <h4>Contato</h4>
-                <div class="social-icons">
-                    <a href=""><img src="assets/icones-gerais/instagram.png" alt="ícone do Instagram"></a>
-                    <a href="mailto:purpuraambiental4@gmail.com" title="E-mail"><img src="" alt="ícone de email"></a>
-                </div>
-                <!-- botão secreto embaixo -->
-                <a href="login.jsp" class="secret" title="Área Privada"><i class="fas fa-lock"></i> acesso restrito</a>
-            </div>
-
-            <!-- linha de copyright -->
-            <div class="footer-bottom">
-                © 2025 PurPura - Todos os direitos reservados
-            </div>
-        </footer>
-    </div>
+        </div>
+        <div class="footer-col">
+            <h4>Acesso Restrito</h4>
+            <a href="login.jsp" class="secret" title="Área Privada"><img src="assets/purpura/area_restrita.svg"
+                    alt="">Área do Administrador</a>
+        </div>
+        <p class="footer-bottom">© 2025 PurPura - Todos os direitos reservados</p>
+    </footer>
 
 
 </body>
